removes cylinders for panos with false 'included' flag in connectivity, as these cannot be used at inference time or to calculate metrics against

--- a/web/chat/scripts/examine_task_tuples.ipynb
+++ b/web/chat/scripts/examine_task_tuples.ipynb
@@ -326,11 +326,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: human performance on the instruction following task based on official R2R metrics."
+    "# Get distances and hops across scans.\n",
+    "import networkx as nx\n",
+    "from generate_start_end_pairs import load_nav_graphs\n",
+    "house_hops = {}\n",
+    "house_dists = {}\n",
+    "for house in set(games['scan']):\n",
+    "    graph = load_nav_graphs([house])[house]\n",
+    "    hops = dict(nx.all_pairs_dijkstra_path(graph))\n",
+    "    house_hops[house] = hops\n",
+    "    dists = dict(nx.all_pairs_dijkstra_path_length(graph))\n",
+    "    house_dists[house] = dists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: scan 17DRP5sb8fy connectivity graphs missing panos: ['cb6a9786e4ff47f79a11b024c36ef7c0']\n",
+      "WARNING: scan 29hnd4uzFmX connectivity graphs missing panos: ['15734f1d4789455fabcb6f3c9de5ba5b', '4de3b63eda49451b86a670c2d665273e', 'a860e5bf7afe44179bcdc838db421802', '89b25402eae54a36a9b9d2b9889ab632']\n",
+      "WARNING: scan 29hnd4uzFmX connectivity graphs missing panos: ['7ab6f8baf8bc41628a3b91fa4660ce43']\n",
+      "WARNING: scan wc2JMjhGNzB connectivity graphs missing panos: ['d4955dbea3404527aca7dd3f28e46065']\n",
+      "WARNING: scan wc2JMjhGNzB connectivity graphs missing panos: ['83d47314fbeb461b9af4c6499ffed297']\n",
+      "0.34523809523809523 0.7857142857142857 0.0684145880574452\n",
+      "WARNING: scan 17DRP5sb8fy connectivity graphs missing panos: ['cb6a9786e4ff47f79a11b024c36ef7c0']\n",
+      "WARNING: scan wc2JMjhGNzB connectivity graphs missing panos: ['d4955dbea3404527aca7dd3f28e46065', '83d47314fbeb461b9af4c6499ffed297']\n",
+      "WARNING: scan 29hnd4uzFmX connectivity graphs missing panos: ['2b926a9b858a4c118d903b3899fa5b59', '0fb3575b26954645b116ecd661dac744', 'acdaf6966e6d48c789599b0059c54f3c', '15734f1d4789455fabcb6f3c9de5ba5b', '4de3b63eda49451b86a670c2d665273e', 'a860e5bf7afe44179bcdc838db421802', '89b25402eae54a36a9b9d2b9889ab632', '7ab6f8baf8bc41628a3b91fa4660ce43']\n",
+      "0.6818181818181818 0.9545454545454546 0.03127621504278127\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Estimate human performance on the instruction following and dialog tasks based on official R2R metrics.\n",
+    "def stop_success(scan, path, gold, within_meters=0, within_hops=0):\n",
+    "    return 1 if (house_dists[scan][path[-1]][gold[-1]] <= within_meters or\n",
+    "                 len(house_hops[scan][path[-1]][gold[-1]]) <= within_hops) else 0\n",
+    "\n",
+    "def oracle_success(scan, path, gold, within_meters=0, within_hops=0):\n",
+    "    missing_panos = [pano for pano in path if pano not in house_hops[scan]]\n",
+    "    if len(missing_panos) > 0:\n",
+    "        print(\"WARNING: scan %s connectivity graphs missing panos: \" % scan + str(missing_panos))\n",
+    "    path = [pano for pano in path if pano not in missing_panos]\n",
+    "    return 1 if np.any([house_dists[scan][path_pano][gold[-1]] <= within_meters or\n",
+    "                        len(house_hops[scan][path_pano][gold[-1]]) <= within_hops\n",
+    "                        for path_pano in path]) else 0\n",
+    "\n",
+    "def spl(scan, path, gold, within_meters=0, within_hops=0):\n",
+    "    return 1. / len(path) if stop_success(scan, path, gold,\n",
+    "                                          within_meters=within_meters, within_hops=within_hops) else 0\n",
+    "\n",
+    "def oracle_spl(scan, path, gold, within_meters=0, within_hops=0):\n",
+    "    return 1. / len(path) if oracle_success(scan, path, gold,\n",
+    "                                            within_meters=within_meters, within_hops=within_hops) else 0\n",
+    "\n",
+    "ins_sr = 0  # sucess rate for instruction following\n",
+    "ins_osr = 0  # oracle success rate for instruction following\n",
+    "ins_spl = 0  # spl for instruction following\n",
+    "dia_sr = 0  # success rate for task-driven dialog navigation\n",
+    "dia_osr = 0  # oracle success rate for task-driven dialog navigation\n",
+    "dia_spl = 0  # spl for task-driven dialog navigation\n",
+    "\n",
+    "for task in ins_follow:\n",
+    "    ins_sr += stop_success(task['scan'], task['player_path'], task['planner_path'], within_meters=3)\n",
+    "    ins_osr += oracle_success(task['scan'], task['player_path'], task['planner_path'], within_meters=3)\n",
+    "    ins_spl += spl(task['scan'], task['player_path'], task['planner_path'], within_meters=3)\n",
+    "ins_sr /= float(len(ins_follow))\n",
+    "ins_osr /= float(len(ins_follow))\n",
+    "ins_spl /= float(len(ins_follow))\n",
+    "print(ins_sr, ins_osr, ins_spl)\n",
+    "\n",
+    "for idx in games.index:\n",
+    "    dia_sr += stop_success(games['scan'][idx], games['nav_steps'][idx], games['planner_nav_steps'][idx], \n",
+    "                           within_meters=3)\n",
+    "    dia_osr += oracle_success(games['scan'][idx], games['nav_steps'][idx], games['planner_nav_steps'][idx],\n",
+    "                              within_meters=3)\n",
+    "    dia_spl += spl(games['scan'][idx], games['nav_steps'][idx], games['planner_nav_steps'][idx], \n",
+    "                   within_meters=3)\n",
+    "dia_sr /= float(len(games))\n",
+    "dia_osr /= float(len(games))\n",
+    "dia_spl /= float(len(games))\n",
+    "print(dia_sr, dia_osr, dia_spl)"
    ]
   },
   {
