--- a/web/chat/scripts/process_mturk.ipynb
+++ b/web/chat/scripts/process_mturk.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,12 +61,13 @@
     "games_fn = '../tasks/dialog_navigation/all.json'\n",
     "instruction_following_dir = '../tasks/instruction_following/'\n",
     "question_asking_dir = '../tasks/question_asking/'\n",
-    "question_answering_dir = '../tasks/question_answering/'"
+    "question_answering_dir = '../tasks/question_answering/'\n",
+    "dialog_navigation_dir = '../tasks/dialog_navigation/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +88,8 @@
     "# Read in the CSV from Turk and connect each player to their respective logfile to rebuild games.\n",
     "num_unpaired = 0\n",
     "players = pd.DataFrame(columns=[\"wid\", \"uid\", \"pid\", \"role\", \"rating\", \"feedback\"])\n",
-    "games = pd.DataFrame(columns=[\"navigator\",  # uid of the navigator\n",
+    "games = pd.DataFrame(columns=[\"idx\",  # own idx in dataframe\n",
+    "                              \"navigator\",  # uid of the navigator\n",
     "                              \"oracle\",  # uid of the oracle\n",
     "                              \"navigator_quality\",  # rated quality of the navigator from the oracle\n",
     "                              \"oracle_quality\",  # rated quality of the oracle from the navigator\n",
@@ -254,6 +256,7 @@
     "                        planner_nav_steps = get_shortest_planner_path(house, start_pano, end_panos)\n",
     "\n",
     "                        games = games.append({\n",
+    "                            \"idx\": len(games),\n",
     "                            \"navigator\": navigator,\n",
     "                            \"oracle\": oracle,\n",
     "                            \"navigator_quality\": navigator_quality,\n",
@@ -702,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -768,15 +771,19 @@
       "Wrote 53 instances to '../tasks/instruction_following/train.json'\n",
       "Wrote 53 instances to '../tasks/question_asking/train.json'\n",
       "Wrote 53 instances to '../tasks/question_answering/train.json'\n",
+      "Wrote 13 instances to '../tasks/dialog_navigation/train.json'\n",
       "Wrote 3 instances to '../tasks/instruction_following/val_seen.json'\n",
       "Wrote 3 instances to '../tasks/question_asking/val_seen.json'\n",
       "Wrote 3 instances to '../tasks/question_answering/val_seen.json'\n",
+      "Wrote 1 instances to '../tasks/dialog_navigation/val_seen.json'\n",
       "Wrote 9 instances to '../tasks/instruction_following/val_unseen.json'\n",
       "Wrote 9 instances to '../tasks/question_asking/val_unseen.json'\n",
       "Wrote 9 instances to '../tasks/question_answering/val_unseen.json'\n",
+      "Wrote 3 instances to '../tasks/dialog_navigation/val_unseen.json'\n",
       "Wrote 19 instances to '../tasks/instruction_following/test.json'\n",
       "Wrote 19 instances to '../tasks/question_asking/test.json'\n",
-      "Wrote 19 instances to '../tasks/question_answering/test.json'\n"
+      "Wrote 19 instances to '../tasks/question_answering/test.json'\n",
+      "Wrote 5 instances to '../tasks/dialog_navigation/test.json'\n"
      ]
     }
    ],
@@ -906,6 +913,14 @@
     "         for idx in q_answering.index\n",
     "         if q_answering[\"game_idx\"][idx] in folds_to_games[fold]]\n",
     "    fn = os.path.join(question_answering_dir, \"%s.json\" % fold)\n",
+    "    with open(fn, 'w') as f:\n",
+    "        json.dump(d, f, indent=2)\n",
+    "    print(\"Wrote %d instances to '%s'\" % (len(d), fn))\n",
+    "    \n",
+    "    d = [{c: games[c][idx] for c in games.keys()}\n",
+    "         for idx in games.index\n",
+    "         if idx in folds_to_games[fold]]\n",
+    "    fn = os.path.join(dialog_navigation_dir, \"%s.json\" % fold)\n",
     "    with open(fn, 'w') as f:\n",
     "        json.dump(d, f, indent=2)\n",
     "    print(\"Wrote %d instances to '%s'\" % (len(d), fn))"
