adds qualification for workers of all 1-5 ratings instead of ignoring those below 4

--- a/web/chat/scripts/process_mturk.ipynb
+++ b/web/chat/scripts/process_mturk.ipynb
@@ -1280,14 +1280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 557,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AAIQLE701DI9U avg rating 1.00 [qual=0] \n",
+      "AAIQLE701DI9U avg rating 1.00 [qual=0] UPDATING TO 1\n",
       "\t1(g=0)\n",
       "A2R89RXGEVG05I avg rating 5.00 [qual=5] \n",
       "\t5(g=17)\n",
@@ -1301,15 +1301,15 @@
       "\t4(g=1)\n",
       "A2X977GVQ6L90X avg rating 5.00 [qual=5] \n",
       "\t5(g=13)\n",
-      "A3PTO0DMF57GDG avg rating 3.00 [qual=0] \n",
+      "A3PTO0DMF57GDG avg rating 3.00 [qual=0] UPDATING TO 3\n",
       "\t3(g=10)\n",
       "A248LF7KKHXZ14 avg rating 5.00 [qual=5] \n",
       "\t5(g=7), 5(g=16)\n",
-      "A2HC9549CZAKNN avg rating 3.00 [qual=0] \n",
+      "A2HC9549CZAKNN avg rating 3.00 [qual=0] UPDATING TO 3\n",
       "\t3(g=4)\n",
       "A2G7DTL156PTKA avg rating 5.00 [qual=5] \n",
       "\t5(g=12)\n",
-      "A1IZ4NX41GKU4X avg rating 2.00 [qual=0] \n",
+      "A1IZ4NX41GKU4X avg rating 2.00 [qual=0] UPDATING TO 2\n",
       "\t2(g=5)\n",
       "A2UTDZAZV1DF0N avg rating 5.00 [qual=5] \n",
       "\t5(g=7), 5(g=16)\n",
@@ -1341,13 +1341,13 @@
       "\t5(g=3)\n",
       "A2LC2DS8OH7NCA avg rating 5.00 [qual=0] UPDATING TO 5\n",
       "\t5(g=11)\n",
-      "A20FTMW1E6AR1T avg rating 3.00 [qual=0] \n",
+      "A20FTMW1E6AR1T avg rating 3.00 [qual=0] UPDATING TO 3\n",
       "\t3(g=15)\n",
       "A3QEVFM3UD67BA avg rating 4.50 [qual=0] UPDATING TO 5\n",
       "\t4(g=6), 5(g=15)\n",
       "A1WR3WTEHJEY2D avg rating 4.00 [qual=0] UPDATING TO 4\n",
       "\t4(g=5)\n",
-      "AOS2PVHT2HYTL avg rating 3.00 [qual=0] \n",
+      "AOS2PVHT2HYTL avg rating 3.00 [qual=0] UPDATING TO 3\n",
       "\t3(g=6)\n",
       "A38LEVBZ3P5F6T avg rating 5.00 [qual=5] \n",
       "\t5(g=11)\n"
@@ -1379,13 +1379,13 @@
     "    avg_r = np.average(players[wid]['ratings'])\n",
     "    rounded_qual = int(avg_r + 0.5)\n",
     "    update_str = ''\n",
-    "    if rounded_qual != players[wid]['qual'] and (rounded_qual > 3 or players[wid]['qual'] > 0):\n",
+    "    if rounded_qual != players[wid]['qual']:\n",
     "        update_str = \"UPDATING TO %d\" % rounded_qual\n",
     "        qual_csv.at[qual_csv['Worker ID'] == wid, 'UPDATE-MP-Dialog'] = int(rounded_qual)\n",
     "    print(\"%s avg rating %.2f [qual=%d] %s\" % (wid, avg_r, players[wid]['qual'], update_str))\n",
     "    print(\"\\t\" + \", \".join([\"%d(g=%d)\" % (players[wid]['ratings'][idx], players[wid]['game_idxs'][idx])\n",
     "                            for idx in range(len(players[wid]['game_idxs']))]))\n",
-    "with open(qual_fn + \".update\", 'w') as f:\n",
+    "with open(qual_fn + \".update.csv\", 'w') as f:\n",
     "    f.write(qual_csv.to_csv(index=False, quoting=csv.QUOTE_ALL))"
    ]
   },
