makes server pass through houses/tuples per house in fixed, random orders for roughly uniform initial coverage

--- a/web/chat/scripts/process_mturk.ipynb
+++ b/web/chat/scripts/process_mturk.ipynb
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 558,
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
     "    print(\"\\t\" + \", \".join([\"%d(g=%d)\" % (players[wid]['ratings'][idx], players[wid]['game_idxs'][idx])\n",
     "                            for idx in range(len(players[wid]['game_idxs']))]))\n",
     "with open(qual_fn + \".update.csv\", 'w') as f:\n",
-    "    f.write(qual_csv.to_csv(index=False, quoting=csv.QUOTE_ALL))"
+    "    f.write(qual_csv.to_csv(index=False, quoting=csv.QUOTE_ALL, float_format=\"%.0f\"))"
    ]
   },
   {
