changed server games handling to keep all game objects around as overkill solution to NoneType game error encountered in Mturk run

--- a/web/chat/scripts/process_mturk.ipynb
+++ b/web/chat/scripts/process_mturk.ipynb
@@ -1286,14 +1286,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": 601,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AAIQLE701DI9U avg rating 1.00 [qual=0] UPDATING TO 1\n",
+      "AAIQLE701DI9U avg rating 1.00 [qual=1] \n",
       "\t1(g=0)\n",
       "A2R89RXGEVG05I avg rating 5.00 [qual=5] \n",
       "\t5(g=17)\n",
@@ -1307,53 +1307,53 @@
       "\t4(g=1)\n",
       "A2X977GVQ6L90X avg rating 5.00 [qual=5] \n",
       "\t5(g=13)\n",
-      "A3PTO0DMF57GDG avg rating 3.00 [qual=0] UPDATING TO 3\n",
+      "A3PTO0DMF57GDG avg rating 3.00 [qual=3] \n",
       "\t3(g=10)\n",
       "A248LF7KKHXZ14 avg rating 5.00 [qual=5] \n",
       "\t5(g=7), 5(g=16)\n",
-      "A2HC9549CZAKNN avg rating 3.00 [qual=0] UPDATING TO 3\n",
+      "A2HC9549CZAKNN avg rating 3.00 [qual=3] \n",
       "\t3(g=4)\n",
       "A2G7DTL156PTKA avg rating 5.00 [qual=5] \n",
       "\t5(g=12)\n",
-      "A1IZ4NX41GKU4X avg rating 2.00 [qual=0] UPDATING TO 2\n",
+      "A1IZ4NX41GKU4X avg rating 2.00 [qual=2] \n",
       "\t2(g=5)\n",
       "A2UTDZAZV1DF0N avg rating 5.00 [qual=5] \n",
       "\t5(g=7), 5(g=16)\n",
-      "AUFUUD4WG9CVO avg rating 5.00 [qual=0] UPDATING TO 5\n",
+      "AUFUUD4WG9CVO avg rating 5.00 [qual=5] \n",
       "\t5(g=4)\n",
-      "A2TUUIV61CR0C7 avg rating 5.00 [qual=0] UPDATING TO 5\n",
+      "A2TUUIV61CR0C7 avg rating 5.00 [qual=5] \n",
       "\t5(g=2)\n",
-      "A1AKL5YH9NLD2V avg rating 4.00 [qual=0] UPDATING TO 4\n",
+      "A1AKL5YH9NLD2V avg rating 4.00 [qual=4] \n",
       "\t4(g=8)\n",
-      "A13WYZ8AXD6ODX avg rating 5.00 [qual=0] UPDATING TO 5\n",
+      "A13WYZ8AXD6ODX avg rating 5.00 [qual=5] \n",
       "\t5(g=14)\n",
-      "A1VAL7L9L79IN0 avg rating 5.00 [qual=0] UPDATING TO 5\n",
+      "A1VAL7L9L79IN0 avg rating 5.00 [qual=5] \n",
       "\t5(g=10)\n",
-      "A1H1TKK54YG94Q avg rating 5.00 [qual=0] UPDATING TO 5\n",
+      "A1H1TKK54YG94Q avg rating 5.00 [qual=5] \n",
       "\t5(g=9)\n",
-      "A3W6T1WDYXMR3 avg rating 5.00 [qual=0] UPDATING TO 5\n",
+      "A3W6T1WDYXMR3 avg rating 5.00 [qual=5] \n",
       "\t5(g=2)\n",
-      "A3NMQ3019X6YE0 avg rating 5.00 [qual=0] UPDATING TO 5\n",
+      "A3NMQ3019X6YE0 avg rating 5.00 [qual=5] \n",
       "\t5(g=14)\n",
-      "A27OFCQG73Z4UF avg rating 5.00 [qual=0] UPDATING TO 5\n",
+      "A27OFCQG73Z4UF avg rating 5.00 [qual=5] \n",
       "\t5(g=3)\n",
-      "A2YE7NBCK14VAQ avg rating 4.00 [qual=0] UPDATING TO 4\n",
+      "A2YE7NBCK14VAQ avg rating 4.00 [qual=4] \n",
       "\t4(g=8)\n",
-      "A3CH1Z6J9R38G9 avg rating 4.50 [qual=0] UPDATING TO 5\n",
+      "A3CH1Z6J9R38G9 avg rating 4.50 [qual=5] \n",
       "\t4(g=0), 5(g=17)\n",
-      "AOIK8K4X34LGR avg rating 5.00 [qual=0] UPDATING TO 5\n",
+      "AOIK8K4X34LGR avg rating 5.00 [qual=5] \n",
       "\t5(g=1)\n",
-      "A13CXQGLSH6QY8 avg rating 5.00 [qual=0] UPDATING TO 5\n",
+      "A13CXQGLSH6QY8 avg rating 5.00 [qual=5] \n",
       "\t5(g=3)\n",
-      "A2LC2DS8OH7NCA avg rating 5.00 [qual=0] UPDATING TO 5\n",
+      "A2LC2DS8OH7NCA avg rating 5.00 [qual=5] \n",
       "\t5(g=11)\n",
-      "A20FTMW1E6AR1T avg rating 3.00 [qual=0] UPDATING TO 3\n",
+      "A20FTMW1E6AR1T avg rating 3.00 [qual=3] \n",
       "\t3(g=15)\n",
-      "A3QEVFM3UD67BA avg rating 4.50 [qual=0] UPDATING TO 5\n",
+      "A3QEVFM3UD67BA avg rating 4.50 [qual=5] \n",
       "\t4(g=6), 5(g=15)\n",
-      "A1WR3WTEHJEY2D avg rating 4.00 [qual=0] UPDATING TO 4\n",
+      "A1WR3WTEHJEY2D avg rating 4.00 [qual=4] \n",
       "\t4(g=5)\n",
-      "AOS2PVHT2HYTL avg rating 3.00 [qual=0] UPDATING TO 3\n",
+      "AOS2PVHT2HYTL avg rating 3.00 [qual=3] \n",
       "\t3(g=6)\n",
       "A38LEVBZ3P5F6T avg rating 5.00 [qual=5] \n",
       "\t5(g=11)\n"
