adds server sampling ordering to address biases as they arise batch-for-batch in the data; adds checkbox for workers to flag their convo w technical difficulties

--- a/web/chat/scripts/process_mturk.ipynb
+++ b/web/chat/scripts/process_mturk.ipynb
@@ -3046,21 +3046,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING: uid '5d06bc8ca4dcc' missing from known workers but has finished, added game\n",
-      "WARNING: uid '5d06ca109a4b3' missing from known workers but has finished, added game\n",
-      "WARNING: uid '5d06b8579b769' missing from known workers but has finished, added game\n",
-      "WARNING: uid '5d06be59d1cd8' missing from known workers but has finished, added game\n",
-      "WARNING: uid '5d06dd59bd9e2' missing from known workers but has finished, added game\n",
-      "WARNING: uid '5d06ca2d674c6' missing from known workers but has finished, added game\n",
-      "WARNING: uid '5d06c88b06a9d' missing from known workers but has finished, added game\n",
-      "WARNING: uid '5d06b7d6706c0' missing from known workers but has finished, added game\n",
+      "WARNING: wid 'A2Q3FS9G8ITCN7' never received a rating in game 16\n",
+      "WARNING: uid '5d06bc8ca4dcc' missing from known workers but has finished, added game 16\n",
+      "WARNING: wid 'AKVQTFH16ICGZ' never received a rating in game 40\n",
+      "WARNING: uid '5d06ca109a4b3' missing from known workers but has finished, added game 40\n",
+      "WARNING: uid '5d06b8579b769' missing from known workers but has finished, added game 66\n",
+      "WARNING: wid 'A2L366NNL1YG5W' never received a rating in game 66\n",
+      "WARNING: uid '5d06be59d1cd8' missing from known workers but has finished, added game 81\n",
+      "WARNING: wid 'A2BLQ1GVEHJR8T' never received a rating in game 81\n",
+      "WARNING: uid '5d06dd59bd9e2' missing from known workers but has finished, added game 91\n",
+      "WARNING: wid 'A2BLQ1GVEHJR8T' never received a rating in game 91\n",
+      "WARNING: wid 'A11EL5LWS2L1HX' never received a rating in game 100\n",
+      "WARNING: uid '5d06ca2d674c6' missing from known workers but has finished, added game 100\n",
+      "WARNING: uid '5d06c88b06a9d' missing from known workers but has finished, added game 106\n",
+      "WARNING: wid 'A13WYZ8AXD6ODX' never received a rating in game 106\n",
+      "WARNING: uid '5d06b7d6706c0' missing from known workers but has finished, added game 134\n",
+      "WARNING: wid 'A11EL5LWS2L1HX' never received a rating in game 134\n",
       "A2LU259QPV1I4V avg rating 5.00 [qual=5] \n",
       "\t5(g=31)\n",
       "A1CMWA0L8FTSXA avg rating 5.00 [qual=5] \n",
@@ -3214,11 +3222,13 @@
     "for idx in games.index:\n",
     "    for role in ['navigator', 'oracle']:\n",
     "        if games[role][idx] not in uids_to_workers:\n",
-    "            print(\"WARNING: uid '%s' missing from known workers but has finished, added game\" % games[role][idx])\n",
-    "            continue\n",
-    "        if games['%s_quality' % role][idx] == -1:\n",
+    "            print(\"WARNING: uid '%s' missing from known workers but has finished, added game %d\" % \n",
+    "                  (games[role][idx], idx))\n",
     "            continue\n",
     "        wid = uids_to_workers[games[role][idx]]\n",
+    "        if games['%s_quality' % role][idx] == -1:\n",
+    "            print(\"WARNING: wid '%s' never received a rating in game %d\" % (wid, idx))\n",
+    "            continue\n",
     "        if wid not in players:\n",
     "            row_v = qual_csv.loc[qual_csv['Worker ID'] == wid, 'CURRENT-MP-Dialog']\n",
     "            if not np.isnan(row_v.values[0]):\n",
